// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui text-input component snapshots should render email input 1`] = `
<div
  data-jsx={67896831}
>
  <label
    data-jsx={67896831}
  />
  <input
    data-jsx={67896831}
    name={undefined}
    onChange={[Function]}
    placeholder={undefined}
    type="email"
    value={undefined}
  />
  <span
    data-jsx={67896831}
  />
</div>
`;

exports[`ui text-input component snapshots should render placeholder email 1`] = `
<div
  data-jsx={67896831}
>
  <label
    data-jsx={67896831}
  />
  <input
    data-jsx={67896831}
    name={undefined}
    onChange={[Function]}
    placeholder="email"
    type="email"
    value={undefined}
  />
  <span
    data-jsx={67896831}
  />
</div>
`;

exports[`ui text-input component snapshots should render text input 1`] = `
<div
  data-jsx={67896831}
>
  <label
    data-jsx={67896831}
  />
  <input
    data-jsx={67896831}
    name={undefined}
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value={undefined}
  />
  <span
    data-jsx={67896831}
  />
</div>
`;
